--- a/index.html
+++ b/index.html
@@ -9,4 +9,7 @@
 	<body>
 		<script type="module" src="js/game.js"></script>
 	</body>
+	<style>
+		body {background-color: black;}
+	</style>
 </html>
